--- a/workout-tracker-3stories/index.html
+++ b/workout-tracker-3stories/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Workout Tracker - 3 User Stories</title>
+  <title>Workout Tracker</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
